--- a/astro/src/renderer/index.html
+++ b/astro/src/renderer/index.html
@@ -3,9 +3,8 @@
 
 <head>
   <meta charset="UTF-8" />
-  <title>Astro</title>
   <meta http-equiv="Content-Security-Policy"
-    content="default-src 'self'; script-src 'self'; style-src 'self' 'unsafe-inline'; 'unsafe-eval'; img-src 'self' data:" />
+    content="default-src 'self'; style-src 'self' 'unsafe-inline'; script-src 'self' 'unsafe-eval';" />
 </head>
 
 <body>
